<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:background="@drawable/bg_layout_silver"
    tools:context=".EditProfileAct">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/bg_gradient_primary_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/mregular"
            android:text="Edit Profile"
            android:textColor="@color/whitePrimary"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/mlight"
            android:lineSpacingExtra="9dp"
            android:text="We highly suggest you to use the correct informationsr"
            android:textAlignment="center"
            android:textColor="@color/whitePrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/name_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_nama"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/bio_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_bio"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/username"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/password"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/email_address"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackPrimary" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_view_circle_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="193dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/icon_nopic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="193dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_photo_register_user"
                android:layout_width="90dp"
                android:layout_height="90dp" />

        </com.github.florent37.shapeofview.shapes.CircleView>

        <Button
            android:id="@+id/btn_add_photo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="152dp"
            android:background="@drawable/bg_btn_plus_blue"
            android:fontFamily="@font/mmedium"
            android:text="+"
            android:textColor="@color/whitePrimary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_btn_white_primary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btn_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_back" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="238dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_btn_blue_primary"
            android:fontFamily="@font/mmedium"
            android:text="SAVE PROFILE"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>